syntax = "proto3";
package leave;

service LeaveApplicationService {
  rpc ApplyForLeave(Employee) returns (LeaveResponse){}
  rpc GrantLeave(Employee) returns (GrantedLeave){}
}

message GrantedLeave {
  string name = 3;
  float accruedDays = 1;
  float grantedDays = 2;
}
message Employee {
  int32 employeeId = 1;
  string name = 2;
  float requestedDays = 3;
  float accruedDays = 4;
}
message LeaveResponse {
  bool eligible = 1;
}